--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Install the project dependencies
         run: poetry install --with dev
       - name: Run the automated tests (for example)
-        run: poetry run pytest -v
+        run: poetry run python -m pytest -v
