--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ PyMuPDF = "^1.24.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
