--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
 name: CI
-on: [pull_request, push]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   ci:
@@ -25,5 +29,5 @@ jobs:
           key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
         run: poetry install --with dev
-      - name: Run the automated tests (for example)
-        run: poetry run python -m pytest -v --cov=pdfmarker tests/
+      - name: Run the automated tests
+        run: poetry run python -m pytest -v
