--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 PyMuPDF = "^1.24.0"
+pytest-cov = "^5.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
