--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,12 +35,8 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
       # code quality
-      - name: Run black
-        run: poetry run black . --check
-      - name: Run isort
-        run: poetry run isort . --check-only
-      - name: Run flake8
-        run: poetry run flake8 .
+      - name: Run ruff
+        run: poetry run ruff check
       - name: Run bandit
         run: poetry run bandit .
       - name: Run safety
