--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,10 @@ readme = "README.md"
 python = "^3.8.1"
 PyMuPDF = "^1.24.0"
 pytest-cov = "^5.0.0"
+ruff = "^0.3.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
-black = "^24.3.0"
-isort = "^5.13.2"
-flake8 = "^7.0.0"
 bandit = "^1.7.8"
 safety = "^3.1.0"
 
