--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "pdfmarker"
-version = "0.1.0"
-description = "Simple tool to add highlights/markers to pdf documents."
-authors = ["Your Name <you@example.com>"]
+version = "0.1.1"
+description = "Simple tool to mark/add highlights to pdf documents."
+authors = ["Tom Uijtdehaag <tjl.udh@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
