--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
       # testing
       - name: Run the automated tests
         run: poetry run python -m pytest -v --cov=./ --cov-report=xml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+      # - name: Upload coverage to Codecov
+      #   uses: codecov/codecov-action@v1
       # code quality
       - name: Run ruff
         run: poetry run ruff check
